# mono_dataset_code

./: CMakeLists.txt
aruco/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Findaruco.cmake  aruco-uninstalled.pc  cmake_uninstall.cmake
aruco-1.3.0/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
aruco-1.3.0/src/: chromaticmask.cpp  chromaticmask.h  markerdetector.cpp
aruco-1.3.0/utils/: Makefile  aruco_board_pix2meters  aruco_create_board  aruco_selectoptimalmarkers  aruco_simple_board  aruco_test_board.cpp  cmake_install.cmake
aruco-1.3.0/utils_hrm/: aruco_hrm_create_board  aruco_hrm_create_dictionary  aruco_hrm_test  aruco_hrm_test_board  cmake_install.cmake
aruco/src/: Makefile  cmake_install.cmake  libaruco.so.1.3.0
aruco/utils/: aruco_calibration  aruco_create_marker  aruco_simple  aruco_test  aruco_test_board
aruco/utils_hrm/: Makefile  aruco_hrm_test_board.cpp
src/: main_vignetteCalib.cpp
